--- a/web-fundamentals/HTML/Registration form/form.html
+++ b/web-fundamentals/HTML/Registration form/form.html
@@ -39,7 +39,7 @@
         <input type="radio" name="gender">
         <label for="gender">sandwich</label>
         <br>
-        <label for="describe">describe yourself</label>
+        <label for="describe">Message</label>
         <br>
         <textarea name="describe"></textarea>
         <br>
