--- a/web-fundamentals/HTML/Dictionary Entry/Dictionary Entry.html
+++ b/web-fundamentals/HTML/Dictionary Entry/Dictionary Entry.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dictionary Entry</title>
 </head>
 
 <body>
-    <h1><strong>ninja</strong></h1>
+    <h1>ninja</h1>
     <img src="Screenshot 2026-02-03 114833.png" alt="ninja">
     <h2><em>noun</em></h2>
     <ol>
