--- a/web-fundamentals/HTML/Tag Recognition/part1.html
+++ b/web-fundamentals/HTML/Tag Recognition/part1.html
@@ -3,12 +3,12 @@
 <head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>First Website</title>
 </head>
 <body>
-    <h1> Our Story</h1>
+    <h1> Serving Since 1950 </h1>
     <div>
-        
+        <h2>Our Story</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ut dicta esse asperiores accusantium <br>ullam est repellendus accusamus sequi sit! Consectetur <br>ipsa repellendus fugit illo tenetur. Explicabo incidunt nisi tempore.</p>
         <a href="https://www.facebook.com/">Learn More</a>
     </div>
@@ -22,6 +22,7 @@
             <li>Lorem ipsum dolor</li>
             <a href="https://www.facebook.com/">Learn More</a>
         </ul>
+        <button></button>
     </div>
     
 </body>
