--- a/web-fundamentals/HTML/Tag Recognition/part2.html
+++ b/web-fundamentals/HTML/Tag Recognition/part2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Second Website</title>
 </head>
 <body>
     <div>
@@ -20,5 +20,7 @@
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium ad, non reiciendis ratione debitis laborum doloribus numquam amet eligendi, quas velit? Nostrum, excepturi? Itaque tempore officiis, et necessitatibus ab tenetur!</p>
         <a href="https://www.facebook.com/">Learn More</a>
     </div>
+    <p>on reiciendis ratione debitis laboru</p>
+    <h3>Marbi maximus justo</h3>
 </body>
 </html>
