--- a/web-fundamentals/HTML/Tag Recognition/part3.html
+++ b/web-fundamentals/HTML/Tag Recognition/part3.html
@@ -3,15 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Third Website</title>
 </head>
 <body>
+    <img src="Capture.PNG" alt="profusion">
     <h1>Profusion</h1>
     <a href="https://www.facebook.com/">Home</a>
     <a href="https://www.facebook.com/">About</a>
     <a href="https://www.facebook.com/">Services</a>
     <a href="https://www.facebook.com/">Client</a>
+    <a href="https://www.facebook.com">Contact us</a>
     <img src="https://cdn.vectorstock.com/i/1000v/20/27/smiling-brunette-girl-dancing-vector-20982027.jpg" alt="girl dancing" width="350",height="350">
+    <img src="xqwd.PNG" alt="username">
+    <img src="veef.PNG" alt="Search bar">
+    <a href="https://www.facebook.com">Call +65120841</a>
+    <img src="revvwevwe.PNG" alt="select">
     <a href="https://www.facebook.com/">Read More</a>
     
     
