--- a/web-fundamentals/CSS/Bottom Up/bottomup.html
+++ b/web-fundamentals/CSS/Bottom Up/bottomup.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Button Styling</title>
+    <link rel="stylesheet" href="bottomup.css">
 </head>
 <body>
+    <button class="d1">Search</button>
+    <br><br>
+    <button class="d2">+</button>
+    <br><br>
+    <button class="d3">Create Account</button>
     
+
 </body>
 </html>
