--- a/web-fundamentals/HTML/Fix Indentation/part1.html
+++ b/web-fundamentals/HTML/Fix Indentation/part1.html
@@ -8,6 +8,11 @@
 <body>
     <h1>What language do you love?</h1>
     <p>I love HTML!</p>
+    
+    <select name="" id="">
+        <option value="languages">languages</option>
+        <option value="test">test</option>
+    </select>
 </body>
 
 </html>
